--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -16,7 +16,7 @@ site_type: Person
 local_business_type: ''
 org_name: ''
 description: ''
-twitter: ''
+twitter: 'talia_and'
 
 # Contact (edit or remove options as required)
 
