--- a/themes/starter-hugo-academic/config/_default/params.yaml
+++ b/themes/starter-hugo-academic/config/_default/params.yaml
@@ -20,28 +20,28 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: taliaanderson@email.arizona.edu
+#phone: 888 888 88 88
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
+  street: Laboratory of Tree-Ring Research, 1215 E. Lowell Street
+  city: Tucson
+  region: AZ
+  postcode: '85721'
   country: United States
   country_code: US
 coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
-office_hours:
-  - 'Monday 10:00 to 13:00'
-  - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+  latitude: '32.2294'
+  longitude: '-110.95255'
+#directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
+#office_hours:
+ # - 'Monday 10:00 to 13:00'
+  #- 'Wednesday 09:00 to 10:00'
+#appointment_url: 'https://calendly.com'
 contact_links:
   - icon: twitter
     icon_pack: fab
     name: DM Me
-    link: 'https://twitter.com/Twitter'
+    link: 'https://twitter.com/talia_and'
   - icon: skype
     icon_pack: fab
     name: Skype Me
