--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,7 @@ theme: "starter-hugo-academic"
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Talia Anderson # Website name
+domain: taliaanderson.github.io
 baseurl: 'https://tanderson.github.io/' # Website URL
 copyright: '' # Footer text, e.g. '© {year} Me'
 
