--- a/themes/starter-hugo-academic/config/_default/params.yaml
+++ b/themes/starter-hugo-academic/config/_default/params.yaml
@@ -20,32 +20,32 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: taliaanderson@email.arizona.edu
+email: tanderson@ucar.edu
 #phone: 888 888 88 88
-address:
-  street: Laboratory of Tree-Ring Research, 1215 E. Lowell Street
-  city: Tucson
-  region: AZ
-  postcode: '85721'
-  country: United States
-  country_code: US
-coordinates:
-  latitude: '32.2294'
-  longitude: '-110.95255'
+#address:
+#  street: Laboratory of Tree-Ring Research, 1215 E. Lowell Street
+#  city: Tucson
+#  region: AZ
+#  postcode: '85721'
+#  country: United States
+#  country_code: US
+#coordinates:
+#  latitude: '32.2294'
+#  longitude: '-110.95255'
 #directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
 #office_hours:
  # - 'Monday 10:00 to 13:00'
   #- 'Wednesday 09:00 to 10:00'
 #appointment_url: 'https://calendly.com'
 contact_links:
-  - icon: twitter
-    icon_pack: fab
-    name: DM Me
-    link: 'https://twitter.com/talia_and'
-  - icon: skype
-    icon_pack: fab
-    name: Skype Me
-    link: 'skype:echo123?call'
+#  - icon: twitter
+#    icon_pack: fab
+#    name: DM Me
+#    link: 'https://twitter.com/talia_and'
+ # - icon: skype
+ #   icon_pack: fab
+ #   name: Skype Me
+ #   link: 'skype:echo123?call'
   - icon: keybase
     icon_pack: fab
     name: Chat on Keybase
